Fix Blog (spacing, h2 and link hover)

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -4,11 +4,7 @@ main#blog .size-blog-thumbnails {
 
 .content-grid h2 {
   display: inline-block;
-  margin: 0 0 var(--spacing-md) 0;
-}
-
-.content-grid h2::after {
-  content: url("data:image/svg+xml,%3Csvg width='11' height='17' viewBox='0 0 11 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_181_1891)'%3E%3Cpath d='M2.33337 0L0.453369 1.88L6.56004 8L0.453369 14.12L2.33337 16L10.3334 8L2.33337 0Z' fill='%23333030'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_181_1891'%3E%3Crect width='11' height='17' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+  margin-top: 0;
 }
 
 .content-grid h2 a {
