--- a/styles/grid.css
+++ b/styles/grid.css
@@ -145,18 +145,15 @@ img.size-blog-thumbnails {
 a.category-link {
   font-family: "MartianMono-Medium";
   font-size: var(--font-size-pill);
-  line-height: 1;
   font-weight: 500;
-  display: inline-block;
   color: var(--mars);
   text-transform: uppercase;
   text-decoration: none;
-  border-bottom: 1px solid transparent;
   transition: all 500ms;
 }
 
 a.category-link:hover {
-  border-bottom: 1px solid var(--mars);
+  text-decoration: underline;
 }
 
 .category-link-list {
